--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.vorlonsoft:androidrate:1.0.8'
-    implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:18.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'com.google.firebase:firebase-core:17.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
