--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="trung.hci_billiards">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -27,7 +28,9 @@
         <meta-data android:name="com.facebook.accountkit.FacebookAppEventsEnabled"
             android:value="false"/>
         <activity
-            android:name="com.facebook.accountkit.ui.AccountKitActivity" />
+            android:name="com.facebook.accountkit.ui.AccountKitActivity"
+            android:theme="@style/AppLoginTheme"
+            tools:replace="android:theme"/>
 
         <activity android:name="com.facebook.accountkit.ui.AccountKitEmailRedirectActivity">
             <intent-filter>
@@ -43,13 +46,13 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".GoiYChoBan" />
-        <activity android:name=".DatBan" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".BookTable" />
         <activity android:name=".BilliardDetail" />
         <activity android:name=".ListBilliards" />
         <activity android:name=".MainActivity"></activity>
 
-        <activity android:name=".LoginActivity">
+        <activity android:name=".DatBan">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
