--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BidaLo"></activity>
-        <activity android:name=".BidaBang" />
+        <activity android:name=".BanDangDatActivity"></activity>
+        <activity android:name=".BidaLo" />
 
         <meta-data
             android:name="com.facebook.accountkit.ApplicationName"
